Implement Sample 04 - Vulkan Triangle

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,7 +39,7 @@ add_subdirectory(external/SDL)
 add_subdirectory(01-Window)
 add_subdirectory(02-OGL-Triangle)
 add_subdirectory(03-D3D12-Triangle)
-# add_subdirectory(04-VulkanTriangle)
+add_subdirectory(04-Vulkan-Triangle)
 # add_subdirectory(05-2D-Drawing)
 # add_subdirectory(06-ControllerInput)
 # add_subdirectory(07-Networking)
